--- a/src/app/main/layout/cargo/cargo-look-up/cargo-look-up.component.html
+++ b/src/app/main/layout/cargo/cargo-look-up/cargo-look-up.component.html
@@ -1,5 +1,5 @@
 <div class="cargo-search">
-    <div class="row form-group align-items-center">
+    <div class="row align-items-center">
         <div class="col-sm-4 text-right offset-4">
             <h5>Cargo Booking Search</h5>
         </div>
