--- a/src/app/main/layout/cargo/unloading-sheet/unloading-sheet.component.html
+++ b/src/app/main/layout/cargo/unloading-sheet/unloading-sheet.component.html
@@ -98,7 +98,7 @@
                                     <td>{{i + 1}}</td>
                                     <td style="white-space: nowrap">
                                         <a class="cus-a" style="color: #007bff;"
-                                           (click)="gotoBooking(cargoBooking.shipmentNumber)">
+                                           (click)="gotoBooking(cargoBooking.id)">
                                             {{cargoBooking.shipmentNumber}}</a>
                                     </td>
                                     <td>{{cargoBooking.dispatchDate|date}}</td>
