--- a/src/app/main/layout/reports/service-report-by-service/service-form/service-form.component.html
+++ b/src/app/main/layout/reports/service-report-by-service/service-form/service-form.component.html
@@ -11,4 +11,17 @@
             <li class="breadcrumb-item"><span class="breadcrumb-item-router">Service Form</span></li>
         </ul>
     </div>
+    <div class="row" *ngIf="downloaded">
+        <div class="col-lg-12 col-md-12">
+            <div class="tile">
+                <div class="tile-body">
+                    <div class="row">
+                        <div class="col-sm-12">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
